@@ -83,14 +83,18 @@ enum {
     FKO_PROTO_UDP,
     FKO_PROTO_TCP,
     FKO_PROTO_TCP_RAW,
-    FKO_PROTO_ICMP
+    FKO_PROTO_ICMP,
+    FKO_PROTO_HTTP,
 };
 
 /* Other common defines
 */
 #define FKO_DEFAULT_PROTO FKO_PROTO_UDP
 #define FKO_DEFAULT_PORT 62201
+#define FKO_DEFAULT_PORT_STR "62201"
+#define MAX_PORT_STR_LEN 6
 #define MAX_IP_STR_LEN 16
+#define MAX_SERVER_STR_LEN 50
 
 #define MAX_LINE_LEN        1024
 #define MAX_PATH_LEN        1024
@@ -105,8 +109,8 @@ typedef struct fko_cli_options
     char access_str[MAX_PATH_LEN];
     char get_key_file[MAX_LINE_LEN];
     char save_packet_file[MAX_LINE_LEN];
-    int save_packet_file_append;
-    char spa_server_ip_str[MAX_IP_STR_LEN];
+    int  save_packet_file_append;
+    char spa_server_str[MAX_SERVER_STR_LEN];  /* may be a hostname */
     char allow_ip_str[MAX_IP_STR_LEN];
     char spoof_ip_src_str[MAX_IP_STR_LEN];
     char spoof_user[MAX_USERNAME_LEN];
@@ -114,9 +118,11 @@ typedef struct fko_cli_options
     char gpg_signer_key[MAX_GPG_KEY_ID];
     char gpg_home_dir[MAX_PATH_LEN];
 
-    int proto;
-    unsigned int port;
-    unsigned int src_port;  /* only used with --source-port */
+    int spa_proto;
+    unsigned int spa_dst_port;
+    char spa_dst_port_str[MAX_PORT_STR_LEN];
+    unsigned int spa_src_port; /* only used with --source-port */
+    char spa_src_port_str[MAX_PORT_STR_LEN];  /* --source-port */
 
     unsigned int digest_type;
 
