@@ -29,6 +29,6 @@
 /* Prototypes
 */
 char* getpasswd(const char *prompt);
-char* getpasswd_file(const char *pw_file, const char *dst_ip_str);
+char* getpasswd_file(const char *pw_file, const char *server_str);
 
 #endif  /* GETPASSWD_H */
