@@ -28,6 +28,7 @@
 
 #include "fwknop_common.h"
 #include <errno.h>
+#include <netdb.h>
 
 #ifdef WIN32
   #include <winsock2.h>
@@ -122,6 +123,10 @@ struct icmphdr
         } frag;                         /* path mtu discovery */
     } un;
 };
+
+/* for sending SPA packets over HTTP
+*/
+#define HTTP_MAX_REQUEST_LEN    2000  /* bytes - reasonable maximum */
 
 #define ICMP_ECHOREPLY          0   /* Echo Reply */
 #define ICMP_DEST_UNREACH       3   /* Destination Unreachable */
